src/test/ui/rfc-2294-if-let-guard/warns.stderr
error: irrefutable `if let` guard pattern
  --> $DIR/warns.rs:7:20
   |
LL |         Some(x) if let () = x => {}
   |                    ^^^^^^^^^^ this pattern will always match, so the guard is useless
   |
note: the lint level is defined here
  --> $DIR/warns.rs:4:8
   |
LL | #[deny(irrefutable_let_patterns)]
   |        ^^^^^^^^^^^^^^^^^^^^^^^^
   = help: consider removing the guard and adding a `let` inside the match arm
   = help: for more information, visit <https://doc.rust-lang.org/book/ch18-02-refutability.html>

error: unreachable pattern
  --> $DIR/warns.rs:16:25
   |
LL |         x if let None | None = x => {}
   |                         ^^^^
   |
note: the lint level is defined here
  --> $DIR/warns.rs:13:8
   |
LL | #[deny(unreachable_patterns)]
   |        ^^^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

